# rawhide

./: .gitignore  .travis.yml  Cargo.toml  README.md  rustfmt.toml
data/cameras/: all.toml  join.rs
data/cameras/arri/: alexa.toml
data/cameras/canon/: 200d.toml  40d.toml  6dmk2.toml  800d.toml  d60.toml  g1xm3.toml  g2.toml  g3.toml  g5.toml  g6.toml  g9x.toml  g9xm2.toml  kiss.toml  m10.toml  m100.toml  pro70.toml  rebel.toml  s40.toml  s45.toml  s50.toml  s60.toml  s70.toml  s95.toml
data/cameras/fuji/: gfx50s.toml  s1.toml  s5200.toml  s5500.toml  x-a3.toml  x-e2s.toml  x-e3.toml  x-t2.toml  x-t20.toml  x100f.toml
data/cameras/hasselblad/: cfv-50.toml  h4d.toml  h5d-40.toml  h5d-50.toml  h6d-100.toml  x1d.toml
data/cameras/kodak/: dc120.toml  dcs560c.toml  dcs760c.toml  dcs_pro14nx.toml  p712.toml  z1015.toml  z990.toml
data/cameras/leaf/: aptus75.toml  aptusII-10.toml  aptusII-10R.toml  aptusII-12.toml  aptusII-7.toml  aptusII-8.toml
data/cameras/leica/: dlux109.toml  vlux4.toml
data/cameras/minolta/: 5.toml  5d.toml  7.toml  7d.toml  7hi.toml  7i.toml  a1.toml  a2.toml  a200.toml
data/cameras/nikon/: 1aw1.toml  1j1.toml  1j2.toml  1j3.toml  1j5.toml  1v2.toml  b700.toml  coolpixa.toml  d3000.toml  d3400.toml  d4.toml  d40x.toml  d500.toml  d5500.toml  d5600.toml  d700.toml  d7000.toml  d7200.toml  d750.toml  d7500.toml  d850.toml  e5400.toml  e8400.toml  p330.toml  p6000.toml  p7000.toml  p7800.toml
data/cameras/olympus/: c5050.toml  c5050wz.toml  c5060.toml  c7070wz.toml  e-400.toml  e-m10mk3.toml  e-m1mk2.toml  e-pl2.toml  e-pl8.toml  e-pm2.toml  e620.toml  sh-2.toml  sp510uz.toml  tg-5.toml  xz-10.toml
data/cameras/panasonic/: fz300.toml  fz330.toml  fz45.toml  fz82.toml  g10.toml  g6.toml  g7.toml  g80.toml  gf6.toml  gh1.toml  gh5.toml  gm1s.toml  gx80.toml  gx800.toml  gx9.toml  lx10.toml  (+2 more)
fuzz/: .gitignore  Cargo.toml  run
fuzz/src/: main.rs  metadata.rs  unwrapped.rs
src/: lib.rs  main.rs
src/decoders/: ari.rs  arw.rs  basics.rs  cfa.rs  ciff.rs  cr2.rs  crw.rs  dcr.rs  dcs.rs  dng.rs  erf.rs  iiq.rs  image.rs  kdc.rs  mef.rs  mod.rs  mos.rs  mrw.rs  nef.rs  nkd.rs  nrw.rs  orf.rs  packed.rs  pef.rs  pumps.rs  raf.rs  rw2.rs  srw.rs  tfr.rs  tiff.rs  unwrapped.rs  x3f.rs
src/imageops/: buffer.rs  colorspaces.rs  curves.rs  demosaic.rs  demosaic_rest.rs  gamma.rs  gofloat.rs  hasher.rs  ingest.rs  level.rs  mod.rs  pipeline.rs  transform.rs  whitebalance.rs
(+38 files in other folders)
