[package]
name = "rawhide"
version = "0.32.0"
authors = ["Warren Galyen"]
description = "A library to decode camera raw formats"
#documentation = "..."
#homepage = "..."
repository = "https://github.com/warrengalyen/rawhide"
license = "LGPL-2.1"
categories = ["multimedia::images"]

build = "data/cameras/join.rs"

[dependencies]
toml = "0.4.1"
time = "0.1.37"
enum_primitive = "0.1.1"
num = "0.1.37"
lazy_static = "0.2.8"
byteorder = "1"
rayon = "0.7.0"
itertools = "0.6.0"
serde = "1"
serde_derive = "1"
serde_yaml = "0.7.1"
bincode = "0.8.0"
sha2 = "0.6.0"
multicache = "0.3.1"

[build-dependencies]
glob = "0.2.11"
toml = "0.4.1"

[profile.release]
panic = "unwind"

[profile.dev]
panic = "unwind"
opt-level = 3

[[bin]]
name = "rawhide"
doc = false

[[bin]]
name = "benchmark"
doc = false