[package]
name = "rawhide"
version = "0.34.0"
authors = ["Warren Galyen"]
description = "A library to decode camera raw formats"
#documentation = "..."
#homepage = "..."
repository = "https://github.com/warrengalyen/rawhide"
license = "LGPL-2.1"
categories = ["multimedia::images"]

build = "data/cameras/join.rs"

[dependencies]
toml = "0.4.5"
time = "0.1.38"
enum_primitive = "0.1.1"
num = "0.1.39"
lazy_static = "1"
byteorder = "1"
rayon = "1"
itertools = "0.7.8"
serde = "1"
serde_derive = "1"
serde_yaml = "0.7.1"
bincode = "1"
sha2 = "0.6.0"
multicache = "0.4.1"

[build-dependencies]
glob = "0.2.11"
toml = "0.4.5"

[profile.release]
panic = "unwind"

[profile.dev]
panic = "unwind"
opt-level = 3

[[bin]]
name = "rawhide"
doc = false

[[bin]]
name = "benchmark"
doc = false