[package]
name = "rawhide"
version = "0.35.6"
authors = ["Warren Galyen"]
description = "A library to decode camera raw formats"
#documentation = "..."
#homepage = "..."
repository = "https://github.com/warrengalyen/rawhide"
license = "LGPL-2.1"
categories = ["multimedia::images"]
edition = "2018"

build = "data/cameras/join.rs"

[dependencies]
toml = "0.5"
enumn = "0.1"
num = "0.3"
lazy_static = "1"
byteorder = "1"
rayon = "1"
itertools = "0.9"
serde = "1"
serde_derive = "1"

[build-dependencies]
glob = "0.3"
toml = "0.5"
rustc_version = "0.2.3"

[profile.release]
panic = "unwind"

[profile.dev]
panic = "unwind"
opt-level = 3

[[bin]]
name = "benchmark"
doc = false

[[bin]]
name = "identify"
doc = false